# graph-coloring

./: .gitignore  DOCS.md  DOCUMENTATION.md  LICENSE  README.md
Benchmarks/: benchmarks.csv  benchmarks_AMD_Ryzen7.csv  benchmarks_AMD_Ryzen7_adjL.csv  benchmarks_AMD_Ryzen7_adjV.csv  benchmarks_Intel_i9_list.csv  benchmarks_Intel_i9_vector.csv  memory.csv
runlim-1.10/: .gitignore
src/: CMakeLists.txt  Utils.cpp  Utils.h  benchmark.cpp  final.cpp  main.cpp  main_LDF.cpp  main_greedy_seq.cpp  main_jones_plassmann.cpp  main_luby_par.cpp  main_luby_seq.cpp  main_seq_greedy.cpp  main_seq_luby.cpp
src/Colors/: Colors.cpp  Colors.h
src/Graph/: Coloring.cpp  ColoringJonesPlassmann.cpp  ColoringLDF.cpp  ColoringParallel.cpp  ColoringSeqLuby.cpp  ColoringSequential.cpp  Graph.cpp  Graph.h
src/Solve/: Greedy.cpp  Greedy.h  JonesPlassmann.cpp  JonesPlassmann.h  LDF.cpp  LDF.h  Luby.cpp  Luby.h  Solver.h
src/Utils/: Benchmark.h  DurationLogger.cpp  DurationLogger.h  Jobs.hpp  ParallelForEach.hpp  Range.h  Utils.cpp  Utils.h
src/Vertex/: Vertex.cpp  Vertex.h
src/assets/: .gitignore  test.graph
src/assets/DIMACS/: .gitignore
src/assets/DIMACS/large/: uniprotenc_150m.scc.gra
src/assets/DIMACS/scaleFree/: ba10k5d.gra
src/assets/DIMACS10/: .gitignore
